# my_t

./: .clang-format  .gitignore  CMakeLists.txt  README.md  chartmanager.h  deploy.sh  main.cpp  mainwindow.ui  my_t.pro  resources.qrc  serialmanager.h  settingsdialog.h  toolbarmanager.h  toolchain.cmake
include/: common.h  console.h  mainwindow.h
src/: chartmanager.cpp  console.cpp  mainwindow.cpp  resources.qrc  serialmanager.cpp  settingsdialog.cpp  settingsdialog.ui  toolbarmanager.cpp
styles/: styles.qss
